--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -48,19 +48,6 @@
     font-family: "Roboto Condensed", sans-serif;
     line-height: 1.5;
   }
-
-  .hidden-lr:nth-child(2) {
-    transition-delay: 100ms;
-  }
-  .hidden-lr:nth-child(3) {
-    transition-delay: 200ms;
-  }
-  .hidden-lr:nth-child(4) {
-    transition-delay: 300ms;
-  }
-  .hidden-lr:nth-child(5) {
-    transition-delay: 400ms;
-  }
 }
 
 @layer utilities {
@@ -99,6 +86,7 @@
     filter: blur(5px);
     transform: translateX(-100%);
     transition: all 0.3s;
+    transition-delay: calc(var(--order-lr) * 100ms);
   }
 
   .shown-lr {
